--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -77,6 +77,7 @@
 
     <string name="notification">सूचनाएं</string>
     <string name="notification_setting">Notification Setting</string>
+    <string name="binge_setting">Binge Watch</string>
     <string name="manage_account">Manage Account</string>
     <string name="login_signup">Log In / Sign Up</string>
     <string name="login_txt">लॉग इन</string>
