--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -20,6 +20,7 @@
     <string name="privacy_policy">นโยบายความเป็นส่วนตัว</string>
     <string name="sign_out">ออกจากระบบ</string>
     <string name="redeem_coupon">แลกคูปอง</string>
+    <string name="other_application">แอปพลิเคชันอื่น ๆ</string>
     <string name="change_language_message">คุณกำลังเปลี่ยนภาษา</string>
     <string name="change_language">เปลื่ยนภาษา</string>
     <string name="in_case_of_any">ในกรณีที่มีปัญหาใด ๆ</string>
