--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -273,6 +273,7 @@
     <string name="privacy_policy">Privacy Policy</string>
     <string name="sign_out">Logout</string>
     <string name="redeem_coupon">Redeem Coupon</string>
+    <string name="other_application">Other Applications</string>
 
     <string name="wake_up_connection">Wake up your connection !</string>
 
