--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -274,6 +274,10 @@
     <string name="sign_out">Logout</string>
     <string name="redeem_coupon">Redeem Coupon</string>
     <string name="other_application">Other Applications</string>
+    <string name="contact_us">Contact Us</string>
+    <string name="faq">Frequently Ask Questions</string>
+    <string name="about_us">About VIPA</string>
+    <string name="feedback">Feedback</string>
 
     <string name="wake_up_connection">Wake up your connection !</string>
 
