live player wip

--- a/brightcovelibrary/src/main/res/values/strings.xml
+++ b/brightcovelibrary/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="select_video_quality">Select Video Quality</string>
     <string name="cancel">Cancel</string>
     <string name="next_episode">Next Episode</string>
+    <string name="live">Live</string>
 
 
 </resources>
