--- a/brightcovelibrary/src/main/res/values-th/strings.xml
+++ b/brightcovelibrary/src/main/res/values-th/strings.xml
@@ -23,6 +23,7 @@
     <string name="select_video_quality">เลือกคุณภาพวีดีโอ</string>
     <string name="cancel">ยกเลิก</string>
     <string name="next_episode">ตอนต่อไป</string>
+    <string name="live">มีชีวิต</string>
 
 
 </resources>
