--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,7 +82,7 @@
     <string name="new_password">New Password</string>
     <string name="notification">Notifications</string>
     <string name="notification_setting">Notification Setting</string>
-    <string name="binge_setting">Binge Watch</string>
+    <string name="binge_setting">Binge Watch Setting</string>
     <string name="manage_account">Manage Account</string>
     <string name="login_signup">Log In / Sign Up</string>
     <string name="login_txt">Login</string>
