--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -142,7 +142,7 @@
     <string name="image_upload_fail">Image upload failed</string>
     <string name="male">Male</string>
     <string name="female">Female</string>
-    <string name="search_mv_hub">खोजें VIPA(न्यूनतम 3 वर्ण)</string>
+    <string name="search_mv_hub">खोजें VIPA</string>
     <string name="show_all_results">Show All</string>
     <string name="series">सीरीज</string>
     <string name="article">Article</string>
