--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -355,5 +355,6 @@
     <string name="select_genre">Select genre as per your interest for best result you can select multiple choices of interest (max 5)</string>
     <string name="finish">Finish</string>
     <string name="date_difference">You must be 13 years old and above.</string>
+    <string name="recieve_updates">I would like to recieve updates from VIPA in future.</string>
 
 </resources>
