--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -135,8 +135,7 @@
 
     <string name="something_went_wrong">Something went wrong</string>
     <string name="image_upload_fail">Image upload failed</string>
-    <string name="male">Male</string>
-    <string name="female">Female</string>
+
     <string name="search_mv_hub">Search VIPA</string>
     <string name="show_all_results">Show All</string>
     <string name="series">Series</string>
@@ -244,7 +243,7 @@
     <string name="slider_image_content_discription">This is view pager slider Image</string>
     <string name="image_description">Content description</string>
     <string name="error_branch_sharing_url">Unable to share currently. Please try again later.</string>
-    <string name="show_comment">Show Comment</string>
+    <string name="show_comment">Sfhow Comment</string>
     <string name="tab_heading_episodes">EPISODES</string>
     <string name="tab_heading_other">MORE LIKE THIS</string>
     <string name="coming_soon">Coming Soon</string>
@@ -374,6 +373,11 @@
     <string name="finish">Finish</string>
     <string name="date_difference">You must be 13 years old and above.</string>
     <string name="recieve_updates">I would like to recieve updates from VIPA in future.</string>
+    <string name="gender">GENDER</string>
+    <string name="male">MALE</string>
+    <string name="female">FEMALE</string>
+    <string name="others">OTHERS</string>
+    <string name="update_pref">Update Preferences</string>
 
 
 </resources>
