--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -79,7 +79,7 @@
     <string name="new_password">kata sandi baru</string>
     <string name="notification">Notifikasi</string>
     <string name="notification_setting">Notification Setting</string>
-    <string name="binge_setting">Binge Watch Setting</string>
+    <string name="binge_setting">Binge Watch</string>
     <string name="manage_account">Manage Account</string>
     <string name="login_signup">Log In / Sign Up</string>
     <string name="login_txt">Masuk</string>
