--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -271,6 +271,7 @@
     <string name="term_condition">नियम और शर्तें</string>
     <string name="my_watchlist">आपकी वॉचलिस्‍ट</string>
     <string name="my_history">देखे हुए वीडियो</string>
+    <string name="my_download">My Downloads</string>
     <string name="membership_plan">सदस्यता और योजनाएँ</string>
     <string name="privacy_policy">गोपनीयता नीति</string>
     <string name="sign_out">लॉग आउट</string>
