--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -15,6 +15,7 @@
     <string name="term_condition">ข้อกำหนดและเงื่อนไข</string>
     <string name="my_watchlist">รายการโปรดของฉัน</string>
     <string name="my_history">ประวัติการรับชม</string>
+    <string name="my_download">ดาวน์โหลดของฉัน</string>
     <string name="membership_plan">ข้อมูลสมาชิก</string>
     <string name="profile_update_successfully">อัพเดทสำเร็จ</string>
     <string name="privacy_policy">นโยบายความเป็นส่วนตัว</string>
