--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -273,6 +273,7 @@
     <string name="term_condition">Syarat dan ketentuan</string>
     <string name="my_watchlist">Daftar Tontonan Anda</string>
     <string name="my_history">sejarah tontonan</string>
+    <string name="my_download">My Downloads</string>
     <string name="membership_plan">Keanggotaan dan Rencana</string>
     <string name="privacy_policy">Rahasia pribadi</string>
     <string name="sign_out">Keluar</string>
