--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -368,4 +368,7 @@
     <string name="download_over_wifi">Download over WiFi</string>
     <string name="you_can_change">*You can chnage this from settings</string>
 
+    <string name="Downloading">Downloading</string>
+    <string name="Paused">Paused</string>
+
 </resources>
