--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -382,4 +382,7 @@
     <string name="download_will_begin">Your download will begin once you are come on WiFi. Or you can change the setting below:</string>
     <string name="download_over_wifi">Download over WiFi</string>
     <string name="you_can_change">*You can chnage this from settings</string>
+
+    <string name="Downloading">Downloading</string>
+    <string name="Paused">Paused</string>
 </resources>
