--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,7 +25,7 @@
     <string name="enter_email_address">Enter Email Address</string>
     <string name="create_password">Create Password minimum 6 characters</string>
     <string name="mobile_number">Mobile Number</string>
-    <string name="mobile_error">Please enter a 11 digit phone number and must starts with 66 or 0</string>
+    <string name="mobile_error">Please enter a valid phone number and must starts with 66 or 0</string>
     <string name="address">Address</string>
     <string name="dob">Date of Birth</string>
     <string name="buy_for">Subscribe now for next</string>
@@ -389,6 +389,8 @@
 
     <string name="Downloading">Downloading</string>
     <string name="Paused">Paused</string>
+
+    <string name="content_prefrences">Content Preferences</string>
 
 
 </resources>
