--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -414,4 +414,6 @@
     <string name="Paused">หยุดชั่วคราว</string>
 
     <string name="content_prefrences">Content Preferences</string>
+
+    <string name="minutes">นาที</string>
 </resources>
