--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -302,7 +302,7 @@
     <string name="language_thai">Thai</string>
     <string name="language_indonesia">bahasa Indonesia</string>
     <string name="go_to_my_downloads">View My Downloads</string>
-    <string name="no_downloads">No Downloaded Videos Found</string>
+    <string name="no_downloads">Films and TV programmes that you download appear here.</string>
     <string name="delete_download">Delete Download</string>
 
     <string name="title_activity_downloaded_video">DownloadedVideoActivity</string>
