--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -290,7 +290,7 @@
     <string name="language_thai">Thai</string>
     <string name="language_indonesia">bahasa Indonesia</string>
     <string name="download">Download</string>
-    <string name="no_downloads">No Downloaded Videos Found</string>
+    <string name="no_downloads">Films and TV programmes that you download appear here.</string>
     <string name="cancel_download">Cancel Download</string>
     <string name="pause_download">Pause Download</string>
     <string name="delete_download">Delete Download</string>
