--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -62,7 +62,7 @@
     <string name="enter_email_address">ใส่อีเมล</string>
     <string name="create_password">สร้างรหัสผ่านอย่างน้อย 6 ตัวอักษร</string>
     <string name="mobile_number">เบอร์โทรศัพท์มือถือ</string>
-    <string name="mobile_error">โปรดใส่เบอร์โทรศัพท์ หลัก และต้องเริ่มต้นด้วย 66 หรือ 0</string>
+    <string name="mobile_error">กรุณาใส่หมายเลขโทรศัพท์ที่ถูกต้อง เช่น 0812345678 หรือ 66812345678</string>
     <string name="address">ที่อยู่</string>
     <string name="dob">วันเกิด</string>
     <string name="signup"><b><u>สมัครสมาชิก</u></b></string>
@@ -286,7 +286,7 @@
     <string name="language_thai">ไทย</string>
     <string name="language_indonesia">bahasa Indonesia</string>
     <string name="go_to_my_downloads">ดูการดาวน์โหลดของฉัน</string>
-    <string name="no_downloads">ไม่พบวิดีโอที่ดาวน์โหลด</string>
+    <string name="no_downloads">ภาพยนตร์และรายการทีวีที่คุณดาวน์โหลดจะปรากฏที่นี่</string>
     <string name="delete_download">ลบดาวน์โหลด</string>
 
     <string name="title_activity_downloaded_video">DownloadedVideoActivity</string>
@@ -413,7 +413,7 @@
     <string name="Downloading">กำลังดาวน์โหลด</string>
     <string name="Paused">หยุดชั่วคราว</string>
 
-    <string name="content_prefrences">Content Preferences</string>
+    <string name="content_prefrences">การตั้งค่าเนื้อหา</string>
 
     <string name="minutes">นาที</string>
 </resources>
