--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -374,4 +374,5 @@
     <string name="content_prefrences">Content Preferences</string>
 
     <string name="minutes">minutes</string>
+    <string name="For">For</string>
 </resources>
