--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -389,4 +389,5 @@
     <string name="content_prefrences">Content Preferences</string>
 
     <string name="minutes">minutes</string>
+    <string name="For">For</string>
 </resources>
