--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -374,5 +374,6 @@
     <string name="content_prefrences">Content Preferences</string>
 
     <string name="minutes">minutes</string>
+    <string name="For">For</string>
 
 </resources>
