--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -416,4 +416,5 @@
     <string name="content_prefrences">การตั้งค่าเนื้อหา</string>
 
     <string name="minutes">นาที</string>
+    <string name="For">สำหรับ</string>
 </resources>
