--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -393,6 +393,7 @@
     <string name="content_prefrences">Content Preferences</string>
 
     <string name="minutes">minutes</string>
+    <string name="For">For</string>
 
 
 </resources>
