--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -249,7 +249,7 @@
 
     <string name="VIDEO">VOD</string>
     <string name="tab_heading_episodes">EPISODES</string>
-    <string name="tab_heading_other">MORE LIKE THIS</string>
+    <string name="tab_heading_other">RECOMMENDED CONTENT</string>
     <string name="coming_soon">Coming Soon</string>
 
     <string name="title_home">होम</string>
