--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -247,7 +247,7 @@
     <string name="error_branch_sharing_url">Unable to share currently. Please try again later.</string>
     <string name="show_comment">Sfhow Comment</string>
     <string name="tab_heading_episodes">EPISODES</string>
-    <string name="tab_heading_other">MORE LIKE THIS</string>
+    <string name="tab_heading_other">RECOMMENDED CONTENT</string>
     <string name="coming_soon">Coming Soon</string>
 
 
