--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -272,7 +272,8 @@
     <string name="delete_from_watchhistory_error">Video can not be removed  from Watchhistory</string>
     <string name="delete_from_watch_list_message">Video removed from Watch List</string>
     <string name="delete_from_watch_list_message_error">Video can not be removed from Watch List</string>
-    <string name="player_error">We could not process your request, Please try again later</string>
+    <string name="player_error">Sorry, We could not process your request. Please try again later.</string>
+    <string name="geo_block_error">Sorry, this is not available in your area or country</string>
 
     <string name="change_language_message">You are about to change language. This will translate the entire interface.\n\nYou can change your language back at any time in Settings</string>
     <string name="change_language">Change Language</string>
