--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -262,7 +262,8 @@
     <string name="delete_from_watchhistory_error">Video can not be removed  from Watchhistory</string>
     <string name="delete_from_watch_list_message">Video removed from Watch List</string>
     <string name="delete_from_watch_list_message_error">Video can not be removed from Watch List</string>
-    <string name="player_error">We could not process your request, Please try again later</string>
+    <string name="player_error">Sorry, We could not process your request. Please try again later.</string>
+    <string name="geo_block_error">Sorry, this is not available in your area or country</string>
 
     <string name="change_language_message">आप भाषा बदलने वाले हैं। यह संपूर्ण इंटरफ़ेस का अनुवाद करेगा। \n\n आप अपनी भाषा को किसी भी समय सेटिंग में वापस बदल सकते हैं</string>
     <string name="change_language">भाषा बदलो</string>
