--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -171,6 +171,7 @@
     <string name="title_more1">หน้าโปรไฟล์</string>
     <string name="more">เพิ่มเติม</string>
     <string name="player_error">เราไม่สามารถดำเนินการตามคำขอของคุณได้,โปรดลองอีกครั้งใ</string>
+    <string name="geo_block_error">Sorry, this is not available in your area or country</string>
     <string name="tab_heading_episodes">ตอน</string>
     <string name="all_episode">ตอนทั้งหมด</string>
     <string name="video_streaming">VIDEO STREAMING PLATFORM</string>
