--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -208,7 +208,7 @@
     <string name="per_Month">for 1 month</string>
     <string name="you_are_logged_out">आप लॉग आउट हैं</string>
     <string name="number_Cannot_change">Phone Number cannot be changed after setting once</string>
-    <string name="already_exist_number">User with this phone number already exists</string>
+    <string name="already_exist_number">This mobile number is already taken. Please use a different mobile number</string>
     <string name="error">एरर</string>
     <string name="forgot_pwd">Forgot Password</string>
     <string name="delete_comment">Delete Comment</string>
