--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -170,8 +170,8 @@
     <string name="title_live_tv">รายการสด</string>
     <string name="title_more1">หน้าโปรไฟล์</string>
     <string name="more">เพิ่มเติม</string>
-    <string name="player_error">Sorry, We could not process your request. Please try again later.</string>
-    <string name="geo_block_error">Sorry, this is not available in your area or country</string>
+    <string name="player_error">ไม่สามารถทำตามคำขอ ของคุณได้, กรุณาลองใหม่ในภายหลัง</string>
+    <string name="geo_block_error">ขออภัย, บริการนี้ยังไม่เปิดให้บริการในประเทศของคุณ</string>
     <string name="tab_heading_episodes">ตอน</string>
     <string name="all_episode">ตอนทั้งหมด</string>
     <string name="video_streaming">VIDEO STREAMING PLATFORM</string>
@@ -181,7 +181,7 @@
     <string name="delete_from_watchlist">คุณแน่ใจหรือไม่ที่จะลบวีดีโอนี้ออกจากรายการของฉัน?</string>
     <string name="you_are_logged_out">คุณออกจากระบบแล้ว</string>
     <string name="number_Cannot_change">เบอร์โทรศัพท์ไม่สามารถเปลี่ยนได้หลังจากสมัครสมาชิกแล้ว</string>
-    <string name="already_exist_number">มีผู้ใช้ที่มีหมายเลขโทรศัพท์นี้แล้ว</string>
+    <string name="already_exist_number">หมายเลขนี้ มีผู้ใช้งานแล้ว, กรุณาลองหมายเลขอื่น</string>
     <string name="error">พบข้อผิดพลาด</string>
     <string name="forgot_pwd">ลืมพาสเวิร์ด</string>
     <string name="share">แบ่งปัน</string>
