font updated for search

--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -129,7 +129,7 @@
     <string name="ok">ตกลง</string>
 
     <string name="no_result_found">ไม่พบผลลัพธ์</string>
-    <string name="popular_search">ค้นหาจากความนิยม</string>
+    <string name="popular_search">การค้นหายอดนิยม</string>
 
     <string name="no_result">ไม่พบผลลัพธ์</string>
     <string name="no_result1">ไม่พบผลลัพธ์</string>
