--- a/brightcovelibrary/src/main/res/values-th/strings.xml
+++ b/brightcovelibrary/src/main/res/values-th/strings.xml
@@ -24,6 +24,7 @@
     <string name="cancel">ยกเลิก</string>
     <string name="next_episode">ตอนต่อไป</string>
     <string name="live">มีชีวิต</string>
+    <string name="skip_intro">ข้ามตอนต้น</string>
 
 
 </resources>
